fix: fix dark mode button

--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -82,7 +82,7 @@
 	transition       : .4s;
 	width            : 26px;
 	//
-	background-image : url("../../assets/ico/light_mod-ico.svg");
+	background-image : url("../../assets/ico/lm-ico.svg");
 	background-size  : contain;
 	//
 }
@@ -93,7 +93,7 @@ input:checked + .slider {
 
 input:checked + .slider:before {
 	transform        : translateX(26px);
-	background-image : url("../../assets/ico/dark_mod-ico.svg");
+	background-image : url("../../assets/ico/dm-ico.svg");
 	background-size  : contain;
 	filter           : invert(1)
 }
